Create better index.html, add svg icons, add folders

--- a/index.html
+++ b/index.html
@@ -1,3 +1,20 @@
-<h2>Test Page</h2>
+<!DOCTYPE html>
+<head>
+  <meta charset="utf-8">
+  <title>D3 Board Morsels: Techniques for Using D3 to Create a BoardGame Like Resource Management Tool</title>
+    <link href="morsels.css" rel="stylesheet" media="screen">
+</head>
+<style>
+body {
+  margin: 50px;
+}
+</style>
+<body>
+<img src="http://ce.unm.edu/assets/imgs/enrich/cooking-header" alt="" height="200" />
+<h1>D3 Board Morsels</h1>
+<p> Techniques for Using D3 to Create a BoardGame-Like Resource Management Tool.</p>
 
-<p>Test page for d3-board-morsels</p>
+
+
+</body>
+</html>
