Add new SVG icon examples

--- a/index.html
+++ b/index.html
@@ -14,7 +14,21 @@ body {
 <h1>D3 Board Morsels</h1>
 <p> Techniques for Using D3 to Create a BoardGame-Like Resource Management Tool.</p>
 
+<h2>Icons</h2>
+<ul>
+  <li><a href="manipulate-svg-icons/icon-simple.html">Icon Test 1</a></li>
+  <li><a href="manipulate-svg-icons/icon-simple2.html">Icon Test 2</a></li>
+  <li><a href="manipulate-svg-icons/icon-simple3.html">Icon Test 3</a></li>
 
+</ul>
 
-</body>
-</html>
+<h2>Things to Explore</h2>
+SVG
+<ul>
+  <li><a href="https://www.youtube.com/watch?v=1Tl88alW6WM">Design game automation with svg</a></li>
+</ul>
+Canvas
+<ul>
+  <li><a href="https://css-tricks.com/video-screencasts/144-javascript-canvas-game/">Building a javascript game using canvas</a></li>
+  <li><a href="https://developer.mozilla.org/en-US/docs/Games/Techniques/Tilemaps">Tile maps with canvas</a></li>
+</ul>
