--- a/index.html
+++ b/index.html
@@ -8,9 +8,15 @@
 body {
   margin: 50px;
 }
+.bounded {
+  width: 6
+  00px;
+}
 </style>
 <body>
 <img src="http://ce.unm.edu/assets/imgs/enrich/cooking-header" alt="" height="200" />
+<div class="bounded">
+
 <h1>D3 Board Morsels</h1>
 <p> Techniques for Using D3 to Create a BoardGame-Like Resource Management Tool.</p>
 
@@ -19,20 +25,50 @@ body {
   <li><a href="manipulate-svg-icons/icon-simple.html">Icon Test 1</a></li>
   <li><a href="manipulate-svg-icons/icon-simple2.html">Icon Test 2</a></li>
   <li><a href="manipulate-svg-icons/icon-simple3.html">Icon Test 3</a>: copying and pasting HTML doesn't work with IE!  Need to try another approach -- turn into "getIcon" function?</li>
-
+</ul>
+<p>Up Next</p>
+<ul>
+  <li>Maybe try storing the icon in a g, with an outer g that handles the transition?  That way, don't have to worry about weirdo transform issues -- especially since most icons, cards, etc. will have multiple parts, such as titles.</li>
 </ul>
 <p> A thought:  maybe for our version, we do it using the build-each-time  approach, since there shouldn't be a ton of them, we encapsulate it so it's not a huge deal, then we ask folks for help.  </p>
 <p>Also, wait until we know what we actually want to do, <i>then</i> worry about it if we need the technique. </p>
 
-<p>Would it bother me if I only had to deal with one path? Nope, it would make sense.  So why is multiple paths such a big deal?  I think I need to just let this one go.</p>
-<h2>Up Next</h2>
+<h2>Cards</h2>
+<p>Up Next</p>
 <ul>
+  <li> Instead of using icons, try playing with contrasting colors</li>
   <li>Try playing with creating cards -- rounded rectangles with areas that have text</li>
-  <li>ing: aybe try storing the icon in a g, with an outer g that handles the transition?  That way, don't have to worry about weirdo transform issues -- especially since most icons, cards, etc. will have multiple parts, such as titles.</li>
 </ul>
-<h2>Things to Explore</h2>
+
+<h2>Tiles Using SVG</h2>
+<p>Gives you huge amount of control. Also gives you anything SVG can do, including gradients and other funky affects (not that it's clear we need those affects). But have to use math to position everything exactly, and may be limited in using icons -- may eat up too much processing power</p>
+
+<ul>
+  <li></li>
+</ul>
+
+<p>Up Next</p>
+<ul>
+  <li></li>
+</ul>
+
+<h2>Tiles Using Divs</h2>
+<p>Can use external icons, images, etc. Can also use anything that uses HTML, such as the  <a href="http://getbootstrap.com/">Bootstrap</a> CSS Framework, which also gets you responsive design without a lot of work.
+  Might also give us a cleaner way of doing Queues and maps that doesn't require a lot of math (although to be fair, the math for simple SVG maps, for example, is pretty straightforward).
+  Doesn't give you the degree of control that SVG does – e.g., any shape you can think of, you can create; gradients.
+</p>
+
+<ul>
+  <li></li>
+</ul>
+
+<p>Up Next</p>
+<ul>
+  <li></li>
+</ul>
 
 
+<h2>To Read/Watch</h2>
 SVG
 <ul>
   <li><a href="https://www.youtube.com/watch?v=1Tl88alW6WM">Design game automation with svg</a></li>
@@ -42,3 +78,8 @@ Canvas
   <li><a href="https://css-tricks.com/video-screencasts/144-javascript-canvas-game/">Building a javascript game using canvas</a></li>
   <li><a href="https://developer.mozilla.org/en-US/docs/Games/Techniques/Tilemaps">Tile maps with canvas</a></li>
 </ul>
+
+</div>
+
+</body>
+</html>
