SVG icons: create a version that creates multiple icons from scratch; should work across all browsers

--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@ body {
   margin: 50px;
 }
 .bounded {
-  width: 6
-  00px;
+  width: 800px;
 }
 </style>
 <body>
@@ -25,13 +24,30 @@ body {
   <li><a href="manipulate-svg-icons/icon-simple.html">Icon Test 1</a></li>
   <li><a href="manipulate-svg-icons/icon-simple2.html">Icon Test 2</a></li>
   <li><a href="manipulate-svg-icons/icon-simple3.html">Icon Test 3</a>: copying and pasting HTML doesn't work with IE!  Need to try another approach -- turn into "getIcon" function?</li>
+  <li><a href="manipulate-svg-icons/icon-simple4.html">Icon Test 4</a>: creating 4 icons from scratch</li>
 </ul>
+
 <p>Up Next</p>
 <ul>
   <li>Maybe try storing the icon in a g, with an outer g that handles the transition?  That way, don't have to worry about weirdo transform issues -- especially since most icons, cards, etc. will have multiple parts, such as titles.</li>
 </ul>
-<p> A thought:  maybe for our version, we do it using the build-each-time  approach, since there shouldn't be a ton of them, we encapsulate it so it's not a huge deal, then we ask folks for help.  </p>
-<p>Also, wait until we know what we actually want to do, <i>then</i> worry about it if we need the technique. </p>
+
+
+<h2>Tiles Using Divs</h2>
+<p>Can use external icons, images, etc. Can also use anything that uses HTML, such as the  <a href="http://getbootstrap.com/">Bootstrap</a> CSS Framework, which also gets you responsive design without a lot of work.
+  Might also give us a cleaner way of doing Queues and maps that doesn't require a lot of math (although to be fair, the math for simple SVG maps, for example, is pretty straightforward).
+  Doesn't give you the degree of control that SVG does – e.g., any shape you can think of, you can create; gradients.
+</p>
+
+<ul>
+  <li>Start figuring out how Chris Evans tile grid works</li>
+</ul>
+
+<p>Up Next</p>
+<ul>
+  <li></li>
+</ul>
+
 
 <h2>Cards</h2>
 <p>Up Next</p>
@@ -52,20 +68,7 @@ body {
   <li></li>
 </ul>
 
-<h2>Tiles Using Divs</h2>
-<p>Can use external icons, images, etc. Can also use anything that uses HTML, such as the  <a href="http://getbootstrap.com/">Bootstrap</a> CSS Framework, which also gets you responsive design without a lot of work.
-  Might also give us a cleaner way of doing Queues and maps that doesn't require a lot of math (although to be fair, the math for simple SVG maps, for example, is pretty straightforward).
-  Doesn't give you the degree of control that SVG does – e.g., any shape you can think of, you can create; gradients.
-</p>
 
-<ul>
-  <li></li>
-</ul>
-
-<p>Up Next</p>
-<ul>
-  <li></li>
-</ul>
 
 
 <h2>To Read/Watch</h2>
