tile-div: clean up homepage, clarify filenames

--- a/index.html
+++ b/index.html
@@ -19,12 +19,11 @@ body {
 <h1>D3 Board Morsels</h1>
 <p> Techniques for Using D3 to Create a BoardGame-Like Resource Management Tool.</p>
 
-<h2>Icons</h2>
+<h2>SVG Icons in an SVG Area</h2>
 <ul>
-  <li><a href="manipulate-svg-icons/icon-simple.html">Icon Test 1</a></li>
-  <li><a href="manipulate-svg-icons/icon-simple2.html">Icon Test 2</a></li>
-  <li><a href="manipulate-svg-icons/icon-simple3.html">Icon Test 3</a>: copying and pasting HTML doesn't work with IE!  Need to try another approach -- turn into "getIcon" function?</li>
-  <li><a href="manipulate-svg-icons/icon-simple4.html">Icon Test 4</a>: creating 4 icons from scratch</li>
+  <li>There are 2 ways to work with SVG icons: <a href="manipulate-svg-icons/icon-simple.html">Inline</a> or
+<a href="manipulate-svg-icons/icon-simple2.html">create it from scratch</a></li>
+  <li>There are also 2 ways to create multiple SVG icons: <a href="manipulate-svg-icons/icons-copy-html.html">copying and pasting the HTML</a>, which is quick but doesn't work with IE, and <a href="manipulate-svg-icons/icons-from-scratch.html">creating all of the icons from scratch</a></li>
 </ul>
 
 <p>Up Next</p>
