--- a/manipulate-svg-icons/icon-simple.html
+++ b/manipulate-svg-icons/icon-simple.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <head>
   <meta charset="utf-8">
-<script src="https://d3js.org/d3.v4.min.js"></script>       <!-- Load the d3 library -->
-  <link href="../morsels.css" rel="stylesheet" media="screen">      <!-- Taste of D3's CSS; you can get rid of it in your version -->
+  <script src="https://d3js.org/d3.v4.min.js"></script>       <!-- Load the d3 library -->
+  <link href="../morsels.css" rel="stylesheet" media="screen">
 </head>
 <body>
-<h1>Simple Icon</h1>
+<h1>Inline SVG Icon</h1>
+<p>
 <svg width="900" height="900" id="selected_states" class="SVG_playground">
 
 
