--- a/manipulate-svg-icons/icon-simple2.html
+++ b/manipulate-svg-icons/icon-simple2.html
@@ -5,7 +5,7 @@
   <link href="../morsels.css" rel="stylesheet" media="screen">      <!-- Taste of D3's CSS; you can get rid of it in your version -->
 </head>
 <body>
-<h1>Simple Icon</h1>
+<h1>SVG Icon Created from Scratch</h1>
 <svg width="900" height="900" id="selected_states" class="SVG_playground">
 
 </svg>
@@ -34,7 +34,6 @@ d3.select("svg")
 
 </script>
 
-
-<div>Icons made by <a href="http://www.freepik.com" title="Freepik">Freepik</a> from <a href="http://www.flaticon.com" title="Flaticon">www.flaticon.com</a>             is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0">CC BY 3.0</a></div>
+<p> NOTE: don't forget to put the attribution in here</p>
 </body>
 </html>
